Fixed navbar spacing

--- a/style.css
+++ b/style.css
@@ -35,45 +35,41 @@ section {
 }
 
 /* Navigation Styling */
-.nav {
-  padding: 30px;
+nav {
+  padding: 25px;
 }
-.nav li {
+nav li {
   font-weight: 600;
   font-size: 25px;
   color: #f2f2f2;
 }
 
-.nav li a {
+nav li a {
   font-weight: 600;
   font-size: 25px;
   color: #f2f2f2;
 }
 
-.git {
+#git {
   color: #86c232 !important;
   font-weight: 600;
   font-size: 25px;
   transition: all 0.5s ease 0s;
-  padding: 30px 3%;
   text-decoration: none;
   margin-left: auto;
 }
 
-.push {
-  margin-left: auto;
-}
-.GIT:hover {
-  color: #f2f2f2;
+.git:hover {
+  color: #f2f2f2 !important;
 }
 
 .nav-links {
   display: flex;
+  flex-direction: row;
   list-style: none;
 }
 
 .nav-links li {
-  display: inline-block;
   padding: 0px 20px;
 }
 
